# eth_beacon_benchmark

./: Cargo.toml
src/: main.rs
