[package]
name = "eth_beacon_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
eventsource = "0.5.0"
eventsource-client = "0.13.0"
